[gd_scene load_steps=5 format=2]

[ext_resource path="res://EnemyPlayerNew/ShooterGhost.gltf" type="PackedScene" id=1]
[ext_resource path="res://ShooterEnemyZombie.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.8

[sub_resource type="CylinderShape" id=2]
radius = 15.0

[node name="ShooterEnemyZombie" type="KinematicBody"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.25 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -15 )

[node name="ShooterGhost" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.25, 0, -2.18557e-08, 0, 0.25, 0, 2.18557e-08, 0, -0.25, 0, 0, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Launcher" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, -1.3105 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
